# project2

./: .gitignore  CMakeLists.txt  README.md  compare.py
part1/: Part1.h  main.cpp  reader.h  utils.h
part2/: Part2.h  main.cpp  reader.h  utils.cpp  utils.h  writer.h
part3/: Part3.h  main.cpp  reader.h  utils.cpp  utils.h  writer.h
part4/: Part4.h  main.cpp  utils.h
part5/: Part5.h  main.cpp  utils.h
